Update asset paths in about.html

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/bioenergyarabia/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About – Your Site</title>
@@ -8,9 +9,9 @@
   <meta property="og:title" content="About – Your Site" />
   <meta property="og:description" content="A fast, hand-editable HTML site on GitHub Pages." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/images/hero.svg" />
-  <link rel="icon" href="/assets/images/hero.svg" />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <meta property="og:image" content="assets/images/hero.svg" />
+  <link rel="icon" href="assets/images/hero.svg" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div id="site-header"></div>
