Update asset paths in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/bioenergyarabia/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home – Your Site</title>
@@ -8,9 +9,9 @@
   <meta property="og:title" content="Home – Your Site" />
   <meta property="og:description" content="A fast, hand-editable HTML site on GitHub Pages." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/images/hero.svg" />
-  <link rel="icon" href="/assets/images/hero.svg" />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <meta property="og:image" content="assets/images/hero.svg" />
+  <link rel="icon" href="assets/images/hero.svg" />
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div id="site-header"></div>
@@ -35,14 +36,14 @@
   </article>
 </section>
 <p class="small">Replace images in <code>/assets/images/</code> anytime.</p>
-<img src="/assets/images/hero.svg" alt="Hero placeholder" />
+<img src="assets/images/hero.svg" alt="Hero placeholder" />
     </div>
   </main>
   <div id="site-footer"></div>
   <script>
     Promise.all([
-      fetch('/partials/header.html').then(r=>r.text()).then(t=>document.getElementById('site-header').innerHTML=t),
-      fetch('/partials/footer.html').then(r=>r.text()).then(t=>document.getElementById('site-footer').innerHTML=t)
+      fetch('partials/header.html').then(r=>r.text()).then(t=>document.getElementById('site-header').innerHTML=t),
+      fetch('partials/footer.html').then(r=>r.text()).then(t=>document.getElementById('site-footer').innerHTML=t)
     ]);
   </script>
 </body>
