--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home – Bioenergy Arabia</title>
-  <meta name="description" content="A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel—fast." />
+  <meta name="description" content="A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel, delivering reliable, low-emission energy for institutions committed to sustainability and circular waste management.
+" />
   <base href="/bioenergyarabia/">
   <link rel="icon" href="assets/images/hero.svg" />
   <link rel="stylesheet" href="assets/styles.css" />
