--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home – Bioenergy Arabia</title>
-  <meta name="description" content="A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel, delivering reliable, low-emission energy for institutions committed to sustainability and circular waste management.
-" />
+  <meta name="description" content="company profile" />
   <base href="/bioenergyarabia/">
   <link rel="icon" href="assets/images/hero.svg" />
   <link rel="stylesheet" href="assets/styles.css" />
@@ -16,7 +15,8 @@
     <div class="container">
       <section class="hero">
         <h1>Reimagining Waste, Redefining Energy</h1>
-        <p>A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel—fast.</p>
+        <p>A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel, delivering reliable, low-emission energy for institutions committed to sustainability and circular waste management.
+</p>
       </section>
 
       <section class="grid">
