--- a/index.html
+++ b/index.html
@@ -15,8 +15,30 @@
     <div class="container">
       <section class="hero">
         <h1>Reimagining Waste, Redefining Energy</h1>
-        <p>A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel, delivering reliable, low-emission energy for institutions committed to sustainability and circular waste management.
-</p>
+        <p>
+          A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel, delivering reliable, low-emission energy for institutions committed to sustainability and circular waste management.
+        </p>
+      
+        <div class="conversion-flow">
+        <div class="step">
+          <img src="assets/images/waste-oil.jpg" alt="Waste Cooking Oil">
+        </div>
+        <div class="arrow">➜</div>
+        <div class="step">
+          <img src="assets/images/biofuel-pod.jpg" alt="Biofuel Pods Machine">
+        </div>
+        <div class="arrow">➜</div>
+        <div class="step">
+          <img src="assets/images/biodiesel.jpg" alt="Biodiesel Product">
+        </div>
+      </div>
+    
+      <!-- Button -->
+      <div class="cta">
+        <a class="btn-primary" href="https://bioenergyarabia.geovartha.id/home/" target="_blank" rel="noopener noreferrer">
+          Benefit Calculator
+        </a>
+      </div>
       </section>
 
       <section class="grid">
@@ -34,11 +56,11 @@
         </article>
       </section>
 
-      <p class="small">Replace images in <code>assets/images/</code> anytime.</p>
+      <!-- <p class="small">Replace images in <code>assets/images/</code> anytime.</p>
       <img src="assets/images/hero.svg" alt="Hero placeholder" />
     </div>
   </main>
-  <div id="site-footer"></div>
+  <div id="site-footer"></div> -->
 
   <script>
     Promise.all([
