--- a/index.html
+++ b/index.html
@@ -18,43 +18,30 @@
         <p>
           A compact, solar-powered biodiesel system that transforms used cooking oil into clean fuel, delivering reliable, low-emission energy for institutions committed to sustainability and circular waste management.
         </p>
-      
-        <div class="conversion-flow">
-        <div class="step">
+      </section>
+
+      <section class="grid">
+        <article class="card">
+          <h3>Waste Cooking Oil</h3>
           <img src="assets/images/waste-oil.jpg" alt="Waste Cooking Oil">
-        </div>
-        <div class="arrow">➜</div>
-        <div class="step">
+        </article>
+        <article class="card">
+          <h3>Conversion Pod</h3>
           <img src="assets/images/biofuel-pod.jpg" alt="Biofuel Pods Machine">
-        </div>
-        <div class="arrow">➜</div>
-        <div class="step">
+        </article>
+        <article class="card">
+          <h3>Biodiesel Produc</h3>
           <img src="assets/images/biodiesel.jpg" alt="Biodiesel Product">
-        </div>
-      </div>
-    
+          <p>Clean energy that helps you hit ESG targets sooner.</p>
+        </article>
+      </section>
+
       <!-- Button -->
       <div class="cta">
         <a class="btn-primary" href="https://bioenergyarabia.geovartha.id/home/" target="_blank" rel="noopener noreferrer">
           Benefit Calculator
         </a>
       </div>
-      </section>
-
-      <section class="grid">
-        <article class="card">
-          <h3>Fast Setup</h3>
-          <p>Drop-in system for institutions. Minimal footprint, maximum impact.</p>
-        </article>
-        <article class="card">
-          <h3>Circular by Design</h3>
-          <p>Turn waste oil into certified biodiesel and cut disposal costs.</p>
-        </article>
-        <article class="card">
-          <h3>Low Emissions</h3>
-          <p>Clean energy that helps you hit ESG targets sooner.</p>
-        </article>
-      </section>
 
       <!-- <p class="small">Replace images in <code>assets/images/</code> anytime.</p>
       <img src="assets/images/hero.svg" alt="Hero placeholder" />
