--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         <article class="card">
           <h3>Waste Cooking Oil</h3>
           <img src="assets/images/waste-oil.jpg" alt="Waste Cooking Oil">
+          <p>Monetize the unused waste cooking oil.</p>
         </article>
         <article class="card">
           <h3>Conversion Pod</h3>
           <img src="assets/images/biofuel-pod.jpg" alt="Biofuel Pods Machine">
+          <p>High efficiency conversion machine.</p>
         </article>
         <article class="card">
-          <h3>Biodiesel Produc</h3>
+          <h3>Biodiesel Product</h3>
           <img src="assets/images/biodiesel.jpg" alt="Biodiesel Product">
           <p>Clean energy that helps you hit ESG targets sooner.</p>
         </article>
@@ -46,8 +48,8 @@
       <!-- <p class="small">Replace images in <code>assets/images/</code> anytime.</p>
       <img src="assets/images/hero.svg" alt="Hero placeholder" />
     </div>
-  </main>
-  <div id="site-footer"></div> -->
+  </main>-->
+  <div id="site-footer"></div> 
 
   <script>
     Promise.all([
