--- a/team.html
+++ b/team.html
@@ -20,22 +20,26 @@
       <h1>Our Leadership Team</h1>
 <div class="grid">
   <div class="card">
-    <img src="assets/images/team1.svg" alt="Team member 1" />
-    <h3>Member One</h3>
+    <img src="assets/images/allif.png" alt="Team member 1" />
+    <h3>Nur Allif Fathurrahman</h3>
     <p class="small">Founder</p>
   </div>
   <div class="card">
-    <img src="assets/images/team2.svg" alt="Team member 2" />
-    <h3>Member Two</h3>
-    <p class="small">CTO</p>
+    <img src="assets/images/listya.png" alt="Team member 2" />
+    <h3>Listya Eka Anggraini</h3>
+    <p class="small">Co-Founder</p>
   </div>
   <div class="card">
-    <img src="assets/images/team3.svg" alt="Team member 3" />
-    <h3>Member Three</h3>
+    <img src="assets/images/helen.png" alt="Team member 3" />
+    <h3>Anisa Helena Isma Putri</h3>
     <p class="small">Head of Engineering</p>
   </div>
+  <div class="card">
+    <img src="assets/images/izzul.png" alt="Team member 3" />
+    <h3>Izzul Qudsi</h3>
+    <p class="small">CTO</p>
+  </div>
 </div>
-<p class="small">Swap each SVG in <code>assets/images/</code> with your real photos (JPG/PNG/WebP also fine).</p>
     </div>
   </main>
   <div id="site-footer"></div>
