--- a/team.html
+++ b/team.html
@@ -25,25 +25,29 @@
         <div class="team-card">
           <img src="assets/images/allif.png" alt="Nur Allif Fathurrahman" />
           <h3>Nur Allif Fathurrahman</h3>
-          <p>Founder</p>
+          <p class="role">Founder</p>
+          <p class="edu">Ph.D. Chemistry<br>King Fahd University of Petroleum and Minerals (KFUPM)</p>
         </div>
 
         <div class="team-card">
           <img src="assets/images/listya.png" alt="Listya Eka Anggraini" />
           <h3>Listya Eka Anggraini</h3>
-          <p>Co-Founder</p>
+          <p class="role">Co-Founder</p>
+          <p class="edu">Ph.D. Chemistry<br>KFUPM</p>
         </div>
 
         <div class="team-card">
           <img src="assets/images/helen.png" alt="Anisa Helena Isma Putri" />
           <h3>Anisa Helena Isma Putri</h3>
-          <p>Head of Engineering</p>
+          <p class="role">Head of Engineering</p>
+          <p class="edu">Ph.D. Chemical Engineering<br>KFUPM</p>
         </div>
 
         <div class="team-card">
           <img src="assets/images/izzul.png" alt="Izzul Qudsi" />
           <h3>Izzul Qudsi</h3>
-          <p>CTO</p>
+          <p class="role">CTO</p>
+          <p class="edu">Ph.D. Geology<br>KFUPM</p>
         </div>
       </div>
     </div>
