--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Learn about Bioenergy Arabia's mission and vision toward sustainable biodiesel solutions." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/images/biofuel-station.jpg" />
-  <link rel="icon" href="assets/images/logo.png" />
+  <link rel="icon" href="assets/images/icon.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 
