--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
   <meta property="og:title" content="Contact – Bioenergy Arabia" />
   <meta property="og:description" content="Get in touch with Bioenergy Arabia." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="assets/images/hero.svg" />
-  <link rel="icon" href="assets/images/hero.svg" />
+  <meta property="og:image" content="assets/images/icon.png" />
+  <link rel="icon" href="assets/images/icon.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
