--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Home – Bioenergy Arabia</title>
   <meta name="description" content="company profile" />
   <base href="/bioenergyarabia/">
-  <link rel="icon" href="assets/images/hero.svg" />
+  <link rel="icon" href="assets/images/icon.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
