--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Meet the leadership team behind Bioenergy Arabia." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="assets/images/team-banner.jpg" />
-  <link rel="icon" href="assets/images/logo.png" />
+  <link rel="icon" href="assets/images/icon.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 
