--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,35 @@
   <link rel="icon" href="assets/images/icon.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
+<script>
+  const form = document.getElementById('contact-form');
+  const statusEl = document.getElementById('form-status');
+
+  form.addEventListener('submit', async (event) => {
+    event.preventDefault();
+    statusEl.textContent = 'Sending...';
+
+    try {
+      const response = await fetch(form.action, {
+        method: 'POST',
+        headers: { 'Accept': 'application/json' },
+        body: new FormData(form)
+      });
+
+      if (response.ok) {
+        form.reset();
+        statusEl.textContent = '✅ Thank you! Your message has been sent.';
+      } else {
+        const data = await response.json().catch(() => ({}));
+        statusEl.textContent = data.errors
+          ? data.errors.map(e => e.message).join(', ')
+          : '⚠️ Oops, something went wrong. Please try again.';
+      }
+    } catch (error) {
+      statusEl.textContent = '🚫 Network error. Please try again later.';
+    }
+  });
+</script>
 <body>
   <div id="site-header"></div>
 
@@ -25,11 +54,10 @@
           <input type="hidden" name="form-name" value="contact" /> -->
 
         <form
+          id="contact-form"
           class="contact-form"
           action="https://formspree.io/f/xovpwaqy"
           method="POST"
-          accept-charset="UTF-8"
-          id="contact-form"
         >
           <input type="hidden" name="_subject" value="New message from bioenergyarabia.github.io" />
 
