--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home – Bioenergy Arabia</title>
   <meta name="description" content="company profile" />
-  <base href="/bioenergyarabia/">
+  <!-- <base href="/bioenergyarabia/"> -->
   <link rel="icon" href="assets/images/icon.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
