add youtube link to the about section

--- a/about.html
+++ b/about.html
@@ -26,8 +26,14 @@
 
       <div class="about-flex">
         <!-- Left: Image -->
-        <div class="about-image">
-          <img src="assets/images/biofuel-station.jpg" alt="Sustainable Biofuel Station" />
+       <div class="about-video">
+          <iframe 
+            src="https://www.youtube.com/embed/b4SUF8l4dpY" 
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
         </div>
 
         <!-- Right: Vision & Mission -->
