--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </article>
         <article class="card">
           <h3>Conversion Pod</h3>
-          <img src="assets/images/biofuel-pod.jpg" alt="Biofuel Pods Machine">
-          <p>High efficiency conversion machine.</p>
+          <img src="assets/images/lab-scale.png" alt="Lab-Scale Biofuel Converter">
+          <p>Patented technology for efficient biodiesel conversion from waste cooking oil.</p>
         </article>
         <article class="card">
           <h3>Biodiesel Product</h3>
